# PowerSupplyControler

./: .gitignore  CMakeLists.txt  power_supply_app.ini  power_supply_app.service  requirements.txt
headers/: PowerSupplyControler.h
js/: interval_selector.js  plot_chart.js
python/: DataCSVReader.py  PowerSupplyControler.py  app.py  other_functions.py  run_localhost.py  test.py
python_wrapper/headers/: PowerSupplyControlerWrapper.h
python_wrapper/utils/: PowerSupplyModule.cxx
src/: PowerSupplyControler.cxx
utils/: main.cxx
views/: header.tpl  index.tpl
